--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vite build",
     "start": "vite preview",
     "deploy": "gh-pages -d dist",
-    "dev": "vite"
+    "dev": "vite",
+    "optimize-images": "node scripts/optimize-images.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@types/prismjs": "^1.26.5",
+    "sharp": "^0.33.2",
     "typescript": "^5.6.3",
     "vite": "^7.2.4"
   }
