--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   "license": "MIT",
   "dependencies": {
     "gh-pages": "^6.3.0",
+    "markdown-it": "^14.1.0",
     "prismjs": "^1.30.0"
   },
   "devDependencies": {
+    "@types/markdown-it": "^14.1.2",
     "@types/prismjs": "^1.26.5",
     "sharp": "^0.33.2",
     "typescript": "^5.6.3",
